test/TestSuite/Syntax/Errors/bad_timing_res.tjp
project test "Test" "1.0" 2007-08-26 +1w {
# MARK: error 3 bad_timing_res
  timingresolution 21 min
}

